--- a/serverless.yml
+++ b/serverless.yml
@@ -7,7 +7,10 @@ provider:
   name: aws
   runtime: ruby2.5
   environment:
-    SNS_ARN: ${self:custom.secrets.SNS_ARN}
+    CHECK_FOR_USER_ARN: ${self:custom.secrets.CHECK_FOR_USER_ARN}
+    SPOTIFY_CLIENT_ID: ${self:custom.secrets.SPOTIFY_CLIENT_ID}
+    SPOTIFY_CLIENT_SECRET: ${self:custom.secrets.SPOTIFY_CLIENT_SECRET}
+    SPOTIFY_REDIRECT_URI: ${self:custom.secrets.SPOTIFY_REDIRECT_URI}
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -32,10 +35,16 @@ functions:
           path: nowplaying
           method: post
           cors: true
-  dispatcher:
-    handler: handler.dispatcher
+    layers:
+      - arn:aws:lambda:us-east-1:117620298113:layer:gemPacks:2
+
+  check_for_user:
+    handler: handler.check_for_user
     events:
-      - sns: nowplaying
+      - sns: check_for_user
+    layers:
+      - arn:aws:lambda:us-east-1:117620298113:layer:gemPacks:2
+
 
 resources:
   Resources:
