--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,7 @@ custom:
 provider:
   name: aws
   runtime: ruby2.5
+  memorySize: 128
   environment:
     CHECK_FOR_USER_ARN: ${self:custom.secrets.CHECK_FOR_USER_ARN}
     SPOTIFY_CLIENT_ID: ${self:custom.secrets.SPOTIFY_CLIENT_ID}
